# simple-com

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  mkdocs.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: deploy-docs.yaml  main.yaml
.home/: project_info.json
docs/: index.md  memo.md  sample.md
docs/appendix/: build_mkdocs.md
docs/uml/class_diagram/: class_diagram.pu
include/: can_frame.hpp  network_config.hpp
include/can/: can_frame.hpp
include/socket/: error_logger.hpp  socket.hpp  socket_decorator.hpp  socket_exception.hpp  socket_factory.hpp  socket_manager.hpp  socket_observer.hpp  tcp_socket.hpp  udp_socket.hpp
pkg/: BUILD.bazel  WORKSPACE.bazel
scripts/: docker.sh  package.sh  test_one_way_udp.sh  test_sample_udp.sh
source/: CMakeLists.txt
source/archive/: CMakeLists.txt  client.cpp  logger.cpp  logger.hpp  packet.hpp  server.cpp  socket_archive.cpp  socket_archive.hpp  socket_event.cpp  socket_event.hpp  socket_listener.cpp  socket_listener.hpp  socket_logger.hpp  socket_options.hpp  socket_utils.cpp  socket_utils.hpp
source/client/: CMakeLists.txt  main.cpp
source/data_processor/: CMakeLists.txt  data_processor.cpp  data_processor.hpp
source/include/: network_config.hpp
source/sample/: CMakeLists.txt
source/sample/one_way_udp/: CMakeLists.txt
source/sample/python_udp/: client_tcp.py  client_udp.py  server_tcp.py  server_udp.py
source/sample/two_way_tcp/: CMakeLists.txt  client.cpp  server.cpp
source/sample/two_way_udp/: CMakeLists.txt  client.cpp  server.cpp  socket.cpp  socket.hpp  user_config.hpp
source/server/: CMakeLists.txt  main.cpp
source/socket/: CMakeLists.txt  design_pattern.md  socket.cpp  socket.hpp  socket_manager.hpp  tcp_socket.cpp  udp_socket.cpp
src/: CMakeLists.txt
src/client/: main.cpp
src/data_processor/: data_processor.cpp
src/design_pattern_socket/: CMakeLists.txt  client.cpp  design_pattern.md  server.cpp  socket.cpp  socket_decorator.hpp  socket_manager.hpp  udp_socket.cpp
src/sample/: CMakeLists.txt  udp_client.cpp
src/sample/one_way_udp/: server_udp.cpp
src/sample/two_way_udp/: server.cpp
src/server/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  packet.cpp  packet.hpp  socket.cpp  socket.hpp  socket_event.cpp  socket_event.hpp  socket_exception.cpp  socket_exception.hpp  socket_listener.cpp  socket_listener.hpp  socket_logger.cpp  socket_logger.hpp  socket_options.cpp  socket_options.hpp  socket_utils.cpp  socket_utils.hpp
tests/: CMakeLists.txt
tests/socket/: CMakeLists.txt  test_error_logger.cpp  test_socket.cpp
