# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target directories
# --------------------------------------------------------------
add_subdirectory(one_way_udp)
add_subdirectory(two_way_udp)
add_subdirectory(two_way_tcp)
