# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target name
# --------------------------------------------------------------
set(TARGET_NAME server)

# --------------------------------------------------------------
# Executables
# --------------------------------------------------------------
add_executable(${TARGET_NAME}
    main.cpp
)

# --------------------------------------------------------------
# Libraries
# --------------------------------------------------------------
target_link_libraries(${TARGET_NAME} PRIVATE
    data_processor
    socket
    spdlog::spdlog $<$<BOOL:${MINGW}>:ws2_32>
)
