# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target name
# --------------------------------------------------------------
set(TARGET_NAME server)

# --------------------------------------------------------------
# Executables
# --------------------------------------------------------------
# add_executable(${TARGET_NAME}
#     logger.cpp
#     main.cpp
#     packet.cpp
#     socket.cpp
#     socket_event.cpp
#     socket_exception.cpp
#     socket_listener.cpp
#     socket_logger.cpp
#     socket_options.cpp
#     socket_utils.cpp
# )

# target_link_libraries(
#     ${TARGET_NAME} pthread
# )
