# --------------------------------------------------------------
# Required CMake version
# --------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

# --------------------------------------------------------------
# Target name
# --------------------------------------------------------------
set(TARGET_SERVER two_way_tcp_server)
set(TARGET_CLIENT two_way_tcp_client)

# --------------------------------------------------------------
# Executables
# --------------------------------------------------------------
# --------------------------------------------------
# Server
# --------------------------------------------------
add_executable(${TARGET_SERVER}
    server.cpp
)

# --------------------------------------------------
# Client
# --------------------------------------------------
add_executable(${TARGET_CLIENT}
    client.cpp
)
